added client code
